# python-nix-template

./: .gitignore  README.md  flake.nix  justfile  om.yaml  pyproject.toml
.github/workflows/: ci.yam  ci.yaml
.zed/: settings.json
src/python_nix_template/: __init__.py
